--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html>
 <head>
 	<title>Testando</title>
+	<head>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <script type="text/javascript" src="script.js"></script>
+    </head>
 </head>
 <body>
-	<h1>Olha o teste</h1>
-	<p>Aqui estão nossas opções</p>
-	<ol>
-		<li>Olha</li>
-		<li>Oh</li>
-		<li>Gás</li>
-	</ol>
+	<div id="quade">
+		<h1>Olha o teste</h1>
+		<p>Aqui estão nossas opções</p>
+		<ol>
+			<li>Olha</li>
+			<li>Oh</li>
+			<li>Gás</li>
+		</ol>
+	</div>
 </body>
 </html>>
